<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 Google Inc. All rights reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="title_activity_uribeacon_config">Config</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="title_devices">Scan</string>
    <string name="title_config">Config</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="empty_scan_start">Searching for devices</string>
    <string name="empty_scan_end">No devices found</string>
    <string name="empty_config_start">Searching for configurable UriBeacons</string>
    <string name="empty_config_end">No configurable UriBeacons found.\nVisit uribeacon.org</string>

    <!-- Menu items -->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_stop_refresh">Stop Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_config">Configure UriBeacon</string>
    <string name="version_text">Version:</string>
    <string name="uri">URI</string>
    <string name="uriBeacon_characteristics">UriBeacon Characteristics</string>
    <string name="menu_save">Menu Save</string>
    <string name="flags">Flags</string>
    <string name="txPowerMode">Tx Power Mode</string>
    <string name="tx_power_lowest">Lowest</string>
    <string name="tx_power_low">Low</string>
    <string name="tx_power_medium">Medium</string>
    <string name="tx_power_high">High</string>
    <string name="beacon_period">Beacon Period</string>
    <string name="tx_power_mode">Tx Power Mode</string>
    <string name="advertisedTxPowerLevel">Advertised Tx Power Level</string>
    <string name="resetBeacon">Reset to defaults</string>
    <string name="https">https://</string>
    <string name="http">http://</string>
    <string name="urnuuid">urn:uuid:</string>
    <string name="exampleCom">www.example.com</string>
    <string name="period">Period</string>
    <string name="powerMode">Power Mode</string>
    <string name="unlocked">Unlocked</string>
    <string name="lock">Lock</string>
    <string name="ms">ms</string>
    <string name="dbm">dBm</string>
    <string name="cancel">Cancel</string>
    <string name="enter_password">Enter UriBeacon password</string>
    <string name="write_beacon">Write</string>
    <string name="enter_password_again">Enter password again...</string>
    <string name="reset_failed">Could not reset UriBeacon to its default values</string>
    <string name="no_password">Please enter a password</string>
    <string name="password_missmatch">Passwords don\'t match</string>
    <string name="failed_to_read">Failed to read beacon</string>
    <string name="failed_with_code">Failed with code:</string>
    <string name="wrong_password">Wrong password please try again...</string>
    <string name="failed_to_write">Failed to update beacon</string>
    <string name="tx_power_level">Tx Power Level</string>
    <string name="show_advanced_settings">Show Advanced Settings</string>
</resources>
